<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_supervision"
        android:icon="@drawable/ic_project"
        android:title="@string/nav_supervision" />
    <item
        android:id="@+id/nav_todo"
        android:icon="@drawable/ic_people"
        android:title="@string/nav_todo" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_message" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_approval"
        android:title="@string/nav_profile" />
</menu>
